--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,17 @@
 
 #drum-pads {
   height: 50vh;
-  width: 100vw;
+  width: 90vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .drum-pad {
   border: 3px solid black;
+  margin: 10px;
   height: 15vh;
   width: 15vw;
   display: flex;
