--- a/src/App.css
+++ b/src/App.css
@@ -8,29 +8,26 @@
 }
 
 #drum-pads {
-  height: 52vh;
   width: 50vw;
   margin-left: auto;
   margin-right: auto;
-  display: grid;
-  grid-template-columns: 15vw 15vw 15vw;
-  grid-template-rows: 15vh 15vh 15vh;
-  column-gap: 25px;
-  row-gap: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   background-color: black;
   align-self: center;
   align-items: center;
-  
-  
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .drum-pad {
   border: 1px solid #1df7f7;
   border-radius: 12px;
   margin: 10px;
-  margin-top: 50px;
-  height: 14vh;
-  width: 14vw;
+  height: 13vh;
+  width: 13vw;
   display: flex;
   justify-content: center;
   align-items: center;
